Fixed project open page cutting too much of the project name

--- a/resources/assets/sass/_page-project-open.scss
+++ b/resources/assets/sass/_page-project-open.scss
@@ -32,8 +32,7 @@
     display: block;
   }
   .project-open__project-name {
-    //padding-bottom:0;
-    overflow: hidden;
+    font-size: 24px;
   }
   .project-open__small-description {
     padding-top: 0;
